# de-zoomcamp-notes

./: .gitignore  README.md
docs/: dataset.md
week_1_basics_n_setup/: exploring_notes.sh  homework.md
week_1_basics_n_setup/1_terraform_gcp/: README.md
week_1_basics_n_setup/2_docker_sql/: Dockerfile  docker-compose.yaml  (+6 more)
week_2_workflow_orchestration/: Dockerfile  README.md  etl_factory_flow-deployment.yaml  etl_parent_flow-deployment.yaml  etl_web_to_gcs-deployment.yaml  homework.md  ingest-data.py  requirements.txt
week_3_data_warehouse/: README.md  homework.md  ingest-data_fhv.ipynb
week_4_analytics_engineering/: README.md  etl_factory_flow-deployment.yaml  homework.md  pyproject.toml
week_4_analytics_engineering/flows/: taxi-flow-factory_gcs-to-bq.py  taxi-flow-factory_web-to-gcs.py
week_4_analytics_engineering/ny_taxi_rides_project/: dbt_project.yml
week_4_analytics_engineering/ny_taxi_rides_project/.piperider/: config.yml
week_4_analytics_engineering/ny_taxi_rides_project/models/core/: dim_zones.sql  dm_monthly_zone_revenue.sql  fact_fhv_trips.sql  fact_trips.sql  schema.yml
week_4_analytics_engineering/ny_taxi_rides_project/models/staging/: schema.yml  stg_fhv_data.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
week_4_analytics_engineering/workshop_piperider/: homework.md
week_5_batch_processing/: README.md  download_fhvhv-data.sh  homework.ipynb  homework.md  homework.py
week_6_stream_processing/: homework.md
week_7_project/: download-bike-theft-data.sh  explore-data.ipynb  pyproject.toml
week_7_project/flows/: web-to-gcs.py
(+16 files in other folders)
