[tool.poetry]
name = "week-4-analytics-engineering"
version = "0.1.0"
description = ""
authors = ["lisallreiber <lisallreiber@gmail.com>"]
readme = "README.md"
packages = [{include = "week_4_analytics_engineering"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
gcloud = "^0.18.3"
dbt-bigquery = "^1.4.3"
dbt-core = "^1.4.5"
piperider = {extras = ["bigquery"], version = "^0.21.0"}
sqlalchemy = "1.4"
pybigquery = "0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
